--- a/Website/index.html
+++ b/Website/index.html
@@ -1,1 +1,24 @@
+<html>
+<head> 
+<title>Website</title>
+<link rel="stylesheet" href="stylesheet.css"
+</head> 
+<body color="color:white;">
+<section class="main">
+<nav>
+<a href="#" class="logo">
+<img src="logo.png" alt="..." style="width: 100px; height: 85px;">
+</a>
+
+<ul> 
+<li><a href=index.php" class="active">Home</a></li>
+<li><a href=index.php" class="active">Resources  </a></li>
+<li><a href=index.php" class="active">Contact Us</a></li>
+<li><a href=index.php" class="active">Free Tools</a></li>
+
+</nav>
+
+
+
+</body>
 
