--- a/Website/index.html
+++ b/Website/index.html
@@ -1,24 +1,46 @@
 <html>
 <head> 
 <title>Website</title>
-<link rel="stylesheet" href="stylesheet.css"
+<link rel="stylesheet" href="stylesheet.css">
 </head> 
 <body color="color:white;">
 <section class="main">
 <nav>
-<a href="#" class="logo">
-<img src="logo.png" alt="..." style="width: 100px; height: 85px;">
+<a href="index.php" class="logo">
+<img src="Logo.png" alt="Site Logo" style="width: 200px; height: 170px;">
 </a>
 
 <ul> 
-<li><a href=index.php" class="active">Home</a></li>
-<li><a href=index.php" class="active">Resources  </a></li>
-<li><a href=index.php" class="active">Contact Us</a></li>
-<li><a href=index.php" class="active">Free Tools</a></li>
+<li><a href="index.php" class="active">Home</a></li>
+<li><a href="feature.php" >Features</a></li>
+<li><a href="about.php" >About</a></li>
+<li><a href="contact.php" >Contact Us</a></li>
+</ul>
 
 </nav>
+<div class="main-part">
+	<h1>Secure Academy</h1>
+	<p>This site will help individuals protect themselves online</p>
+	<a class= "main-btn" href="features.php">Start Now</a> 
+	</div>
+</section>
 
-
-
+<section class="features">
+	<div class="features-container"> 
+		<div class="feature-box">
+			<div class="f-img">
+				<img src="phishing.png" alt="phishing">
+			</div>
+			<div class="f-text">
+				<h4>Phishing</h4>
+				<p>Learn how you can protect yourself from Phishing.</p>
+				<a href="#" class="main-btn"> Check</a> 
+			</div>
+		</div>
+		
+		
+	</div>
+</section>
 </body>
+</html>
 
