--- a/Website/register.html
+++ b/Website/register.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" type="text/css" href="https://github.com/jeffreywu2001/INFO4190_Proj/blob/main/Website/stylesheet.css">
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
