--- a/Website/index.html
+++ b/Website/index.html
@@ -15,6 +15,8 @@
 <li><a href="feature.php" >Features</a></li>
 <li><a href="about.php" >About</a></li>
 <li><a href="contact.php" >Contact Us</a></li>
+<li><a href="login.php" >Login</a></li>
+<li><a href="register.php" >Register</a></li>
 </ul>
 
 </nav>
@@ -43,4 +45,3 @@
 </section>
 </body>
 </html>
-
