--- a/Website/login.html
+++ b/Website/login.html
@@ -4,23 +4,18 @@
     <meta charset="UTF-8">
 	<link rel="stylesheet" href="register.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register</title>
+    <title>Login</title>
 
 </head>
 
-
 <body>
     <div class="register-container">
-        <h2>Register</h2>
+        <h2>Login<h2>
         <form action="#" method="post">
             <input type="email" name="email" placeholder="Email" required>
             <input type="password" name="password" placeholder="Password" required>
-            <input type="password" name="confirm_password" placeholder="Confirm Password" required>
             <input type="submit" value="Register">
         </form>
-        <div class="login-link">
-            <p>Already have an account? <a href="#">Login here</a></p>
-        </div>
     </div>
 </body>
 </html>
