--- a/Website/index.html
+++ b/Website/index.html
@@ -3,7 +3,7 @@
 <title>Website</title>
 <link rel="stylesheet" href="stylesheet.css">
 </head> 
-<body color="color:white;">
+<body>
 <section class="main">
 <nav>
 <a href="index.php" class="logo">
@@ -12,36 +12,56 @@
 
 <ul> 
 <li><a href="index.php" class="active">Home</a></li>
-<li><a href="feature.php" >Features</a></li>
+<li class="dropdown">
+    <a href="feature.php" class="dropbtn">Features</a>
+    <div class="dropdown-content">
+         <div class="column">
+        <a href="feature1.php">Feature 1</a>
+        <a href="feature2.php">Feature 2</a>
+      </div>
+      <div class="column">
+        <a href="feature3.php">Feature 3</a>
+      </div>
+    </div>
+</li>
 <li><a href="about.php" >About</a></li>
 <li><a href="contact.php" >Contact Us</a></li>
-<li><a href="login.php" >Login</a></li>
-<li><a href="register.php" >Register</a></li>
+<li class="dropdown">
+    <a href="resources.php" class="dropbtn">Resources</a>
+    <div class="dropdown-content">
+        <a href="feature1.php">Social Engineering</a>
+        <a href="feature2.php">Phishing</a>
+        <a href="feature3.php">Spear Phishing</a>
+		<a href="feature3.php">CEO Fraud</a>
+		<a href="feature3.php">Ransomware</a>
+		<a href="feature3.php">Multi-Factor Authentication</a>
+    </div>
+</li>
 </ul>
 
 </nav>
 <div class="main-part">
-	<h1>Secure Academy</h1>
-	<p>This site will help individuals protect themselves online</p>
-	<a class= "main-btn" href="features.php">Start Now</a> 
-	</div>
+    <h1>Secure Academy</h1>
+    <p>This site will help individuals protect themselves online</p>
+    <a class= "main-btn" href="features.php">Start Now</a> 
+    </div>
 </section>
 
 <section class="features">
-	<div class="features-container"> 
-		<div class="feature-box">
-			<div class="f-img">
-				<img src="phishing.png" alt="phishing">
-			</div>
-			<div class="f-text">
-				<h4>Phishing</h4>
-				<p>Learn how you can protect yourself from Phishing.</p>
-				<a href="#" class="main-btn"> Check</a> 
-			</div>
-		</div>
-		
-		
-	</div>
+    <div class="features-container"> 
+        <div class="feature-box">
+            <div class="f-img">
+                <img src="phishing.png" alt="phishing">
+            </div>
+            <div class="f-text">
+                <h4>Phishing</h4>
+                <p>Learn how you can protect yourself from Phishing.</p>
+                <a href="#" class="main-btn"> Check</a> 
+            </div>
+        </div>
+        
+        
+    </div>
 </section>
 </body>
 </html>
