--- a/Website/index.html
+++ b/Website/index.html
@@ -1,5 +1,7 @@
-<html>
-<head> 
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Website</title>
 <link rel="stylesheet" href="stylesheet.css">
 </head> 
@@ -43,7 +45,8 @@
 <div class="main-part">
     <h1>Secure Academy</h1>
     <p>This site will help individuals protect themselves online</p>
-    <a class= "main-btn" href="features.php">Start Now</a> 
+    <a class= "main-btn" href="register.php">Register Now</a> 
+	<p>Have an account? <a class="login-link" href="login.php">Login Here</a></p>
     </div>
 </section>
 
